--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "isomorphic-ws": "^4.0.1",
     "node-cron": "^3.0.0",
     "simpleddp": "^2.2.4",
+    "tcp-ping": "^0.1.1",
     "ws": "^8.3.0"
   },
   "devDependencies": {
